--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,12 @@
   },
   "plugins": ["@typescript-eslint", "react", "prettier"],
   "rules": {
-    "prettier/prettier": ["warn"],
+    "prettier/prettier": [
+      "warn",
+      {
+        "endOfLine": "auto"
+      }
+    ],
     "react/react-in-jsx-scope": "off",
     "react/jsx-uses-react": "off"
   },
