--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
-GEO_API_URL=http://api.openweathermap.org/geo/1.0
-WEATHER_API_URL=https://api.openweathermap.org/data/3.0
-API_KEY=efcb53f6fa6a25bdb1ee6ef57cf2eff4
+REACT_APP_FIREBASE_API_KEY =
+REACT_APP_FIREBASE_AUTH_DOMAIN =
+REACT_APP_FIREBASE_PROJECT_ID =
+REACT_APP_FIREBASE_STORAGE_BUCKET =
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID =
+REACT_APP_FIREBASE_APP_ID =
