--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@types/react-dom": "^18.2.19",
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
+    "firebase": "^10.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
